# ig-obsidian

./: .gitignore  README.md  collections.example.json  config.example.json  locations.example.json  pyproject.toml  requirements.txt  taxonomy.example.json
ig_obsidian/: __init__.py  categorize.py  cli.py  collections.py  config.py  instagram.py  locations.py  models.py  obsidian.py  transcribe.py
tests/: test_pipeline.py
